# your_biohacking_book

./: .env.example  .gitignore  README.md  STATUS.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/: routes.py
backend/graph/: checkpointer.py  graph.py  llm.py  mailer.py  pdf.py  sanitize.py  state.py
backend/graph/nodes/: architect.py  assembler.py  writer.py
backend/tests/: test_graph_mock.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
frontend/src/app/api/copilotkit/: route.ts
frontend/src/components/: BookDisplay.tsx  GenerationProgress.tsx  OutlineReview.tsx  UserInputForm.tsx
